# inf_pr7_zahorulko

./: .gitignore  Cargo.toml
main/: Cargo.toml
main/src/: adreader.rs  indexed.rs  list.rs  listmap.rs  main.rs  parser.rs  reader.rs  save.rs
mcr/: Cargo.toml
mcr/src/: lib.rs
parser/: Cargo.toml  info.txt
parser/src/: indexed.rs  lib.rs  listmap.rs  main.rs  parser.rs  reader.rs  rep_reader.rs  segment.rs
parser/test/: ha.xml
parser/tvex/: 0.xml  1.xml
res/: files.txt
save/: Cargo.toml
save/src/: lib.rs  save.rs  u8.rs  writer.rs
translator/: Cargo.toml
translator/src/: main.rs
