[package]
name = "inf_pr6_zahorulko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16.1"
futures = "0.3.19"
tokio = {version = "1.16.1", features = ["full"]}
async-trait = "0.1.7"
tailcall = "0.1.6"
priority-queue = "1.2.1"
log = "0.4.14"
chrono = "0.4.19"
log4rs = "1.0.0"
sysinfo = "0.23.2"
modular-bitfield = "0.11.2"

[workspace]
members = [
    "main",
    "mcr",
    "save"
]